test/SemanticAnalysis/LifetimeMethods/InvalidArgumentCountSetDead.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__setdead' has incorrect argument count
	void __setdead(unused int i) noexcept { }
}

// CHECK: 1 error generated.
